
    Updated the YAP config file by adding a missing declaration for the time/1
    proprietary built-in meta-predicate and by commenting out setting the call
    that sets the "language" flag to "iso" due to all the YAP libraries that
    don't compile with this setting.

    Updated the XSB config file by adding a missing declaration for the time/1
    proprietary built-in meta-predicate.

    Expanded the "lambdas" example with a contribution by Artur Miguel Dias
    and with more sample queries (including non-deterministic ones).

    Added syntax coloring support for the ^/2 existential quantifier operator
    for most supported text editors and syntax highlighters. Added sample code
    using the ^/2 existential quantifier to the syntax coloring test file.


2.38.0 - December 3, 2009

    Added lambda expression support. Added an example, "lambdas", illustrating
    the use of lambda expressions.

    Added a new compiler flag, "clean", for cleaning the intermediate Prolog
    files generated when compiling Logtalk source files.

    Simplified representation of the runtime execution context using a simple
    list resulting in a small performance increase for some back-end Prolog
    compilers such as B-Prolog.

    Added support for using the set_logtalk_flag/2 directive within Logtalk
    entities. This allows e.g. easy setting of entity properties such as
    "events" when creating new entities using the entity creation built-in
    predicates. Updated documentation on the set_logtalk_flag/2 directive
    and the set_logtalk_flag/2 built-in predicate exceptions.

    Added support for runtime instantiation of the <</2 control construct
    arguments.

    Added support for specifying multiple initialization/1 directives when
    using the create_object/4, create_category/4, and create_protocol/3
    built-in predicates.

    Corrected a bug where some entity properties would not be set when using