@@ -11,7 +11,7 @@
 %
 %  configuration file for Quintus Prolog 3.3~3.5
 %
-%  last updated: November 28, 2009
+%  last updated: December 20, 2009
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -121,6 +121,11 @@ throw(Ball) :-
 
 call_cleanup(_, _) :-
 	throw(not_supported(call_cleanup/2)).
+
+% setup_call_cleanup(+callable, +callable, +callable)
+
+setup_call_cleanup(_, _, _) :-
+	throw(not_supported(setup_call_cleanup/3)).
 
 
 % forall(+callable, +callable)
