@@ -93,7 +93,7 @@ echo "* CxProlog (version 0.97.4 or later):      cxlgt"
 echo "* ECLiPSe (versions 5.10, 6.0):            eclipselgt"
 echo "* GNU Prolog (version 1.3.1 or later):     gplgt"
 echo "* K-Prolog (versions 5.1.5, 6.0.4):        plclgt"
-echo "* Qu-Prolog (version 8.9 or later):        qplgt"
+echo "* Qu-Prolog (version 8.10 or later):       qplgt"
 echo "* Quintus Prolog (version 3.5):            quintuslgt (requires patching Logtalk)"
 echo "* SICStus Prolog (versions 3.12.x, 4.0.x): sicstuslgt"
 echo "* SWI-Prolog (version 5.6.44 or later):    swilgt"
