@@ -61,7 +61,7 @@ post-activate {
 	ui_msg "* ECLiPSe (versions 5.10, 6.0):            eclipselgt"
 	ui_msg "* GNU Prolog (version 1.3.1 or later):     gplgt"
 	ui_msg "* K-Prolog (versions 5.1.5, 6.0.4):        plclgt"
-	ui_msg "* Qu-Prolog (version 8.9 or later):        qplgt"
+	ui_msg "* Qu-Prolog (version 8.10 or later):        qplgt"
 	ui_msg "* Quintus Prolog (version 3.5):            quintuslgt (requires patching Logtalk)"
 	ui_msg "* SICStus Prolog (versions 3.12.x, 4.0.x): sicstuslgt"
 	ui_msg "* SWI-Prolog (version 5.6.44 or later):    swilgt"
